# AIOS

./: .env.example  .gitignore  README.md  docker-compose.yml  run_aios.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: base.py  orchestrator.py  specialized.py
backend/app/api/v1/: agents.py  api_keys.py  apps.py  auth.py  health.py  llm.py  observability.py  organizations.py  rag.py  router.py  studio.py  tools.py  workspaces.py
backend/app/core/: cache.py  config.py  exceptions.py  logging.py  rbac.py  security.py
backend/app/core/dependencies/: auth_deps.py
backend/app/core/middleware/: request_tracing.py
backend/app/database/: base.py  init_db.py  session.py
backend/app/llm/: base.py  router.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  auth_models.py  organization.py  user.py
backend/app/observability/: evaluators.py  telemetry.py
backend/app/rag/: chunker.py  embeddings.py  graph_store.py  pipeline.py  vector_store.py
backend/app/repositories/: base.py  user_repository.py
backend/app/schemas/: api_key.py  llm.py  organization.py  user.py  workspace.py
backend/app/tools/: base.py  integrations.py  mcp.py  registry.py  sandbox.py
backend/app/workers/: celery_app.py
backend/scripts/: load_test.py
backend/tests/: conftest.py  test_agents.py  test_apps.py  test_auth.py  test_health.py  test_infrastructure.py  test_llm_gateway.py  test_observability.py  test_organization.py  test_rag.py  test_security_and_performance.py  test_studio.py  test_tools.py
k8s/: service.yaml  (+2 more)
(+63 files in other folders)
